Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga10/iti98_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga10/iti98_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti98_translation-it-soma.json
@@ -6,7 +6,7 @@
   "iti98:3.2": "una condivisione materiale e una condivisione del Dhamma. ",
   "iti98:3.3": "* ",
   "iti98:4.1": "Ci sono due tipi di aiuti: ",
-  "iti98:4.2": "un aiuto materiale e un aiuto del Dhamma. ",
+  "iti98:4.2": "un aiuto materiale e un aiuto nel Dhamma. ",
   "iti98:4.3": "* ",
   "iti98:5.1": "Il Buddha lo chiama il dono supremo, superiore a ogni altro, ",
   "iti98:5.2": "e tesse le lodi di questa condivisione. ",
