--- a/translation/it/soma/sutta/kn/iti/vagga10/iti98_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti98_translation-it-soma.json
@@ -8,7 +8,7 @@
   "iti98:4.1": "Ci sono due tipi di aiuti: ",
   "iti98:4.2": "un aiuto materiale e un aiuto nel Dhamma. ",
   "iti98:4.3": "* ",
-  "iti98:5.1": "Lo chiamano il dono supremo, superiore a ogni altro ",
+  "iti98:5.1": "Lo chiamano il dono supremo, superiore a ogni altro: ",
   "iti98:5.2": "e il Buddha tesse le lodi di questa condivisione. ",
   "iti98:5.3": "Quale saggio dalla chiara conoscenza, che ha il cuore pieno di fede in questo sommo campo di ricchezza spirituale, ",
   "iti98:5.4": "non farebbe un’offerta quando il momento è opportuno? ",
