--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -119,5 +119,6 @@
   "mn79:20.3": "‚Es gibt eine ausschließlich glückliche Welt, und es gibt eine begründete Übung, um eine ausschließlich glückliche Welt zu verwirklichen.‘“ ",
   "mn79:21.1": "„Nun, was ist diese begründete Übung, um eine ausschließlich glückliche Welt zu verwirklichen?“ ",
   "mn79:21.2": "„Herr, da hat jemand das Töten lebender Geschöpfe, das Stehlen, das Begehen sexueller Verfehlungen und das Lügen aufgegeben und tut diese Dinge nicht mehr. Und er fährt fort, indem er eine Art inbrünstiger Bußübung aufnimmt. ",
-  "mn79:21.3": "Das ist die begründete Übung, um eine ausschließlich glückliche Welt zu verwirklichen.“ "
+  "mn79:21.3": "Das ist die begründete Übung, um eine ausschließlich glückliche Welt zu verwirklichen.“ ",
+  "mn79:22.1": "„Was denkst du, Udāyī? "
 }
