Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga10/iti98_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga10/iti98_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti98_translation-it-soma.json
@@ -13,7 +13,7 @@
   "iti98:5.3": "Quale persona, avendo un cuore pieno di fede in questo supremo campo di merito (ricchezza spirituale), ",
   "iti98:5.4": "avendo intelligenza e sapere, non farebbe un’offerta al momento opportuno (giusto)? ",
   "iti98:6.1": "Per quelli che recitano o ascoltano ",
-  "iti98:6.2": "con un cuore pieno di fede, ",
+  "iti98:6.2": "con un cuore pieno di devozione, ",
   "iti98:6.3": "solerti nell’insegnamento di chi è giunto a una buona destinazione (il Fortunato), ",
   "iti98:6.4": "quel dono purifica l’ambizione (la meta) suprema.” "
 }
