--- a/translation/it/soma/sutta/kn/iti/vagga10/iti98_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti98_translation-it-soma.json
@@ -15,5 +15,5 @@
   "iti98:6.1": "Per quelli che recitano o ascoltano ",
   "iti98:6.2": "con un cuore pieno di devozione, ",
   "iti98:6.3": "solerti nell’insegnamento di chi è giunto a una buona destinazione, ",
-  "iti98:6.4": "quel dono purifica l’ambizione (la meta) suprema.” "
+  "iti98:6.4": "un tale dono purifica l’ambizione (la meta) suprema.” "
 }
