--- a/translation/it/soma/sutta/kn/iti/vagga10/iti98_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti98_translation-it-soma.json
@@ -10,7 +10,7 @@
   "iti98:4.3": "* ",
   "iti98:5.1": "Lo chiamano il dono supremo, superiore a ogni altro ",
   "iti98:5.2": "quella condivisione decantata dal Buddha. ",
-  "iti98:5.3": "Quale persona, avendo un cuore pieno di fede in questo supremo campo di merito (ricchezza spirituale), ",
+  "iti98:5.3": "Quale persona, con un cuore pieno di fede in questo supremo campo di merito (ricchezza spirituale), ",
   "iti98:5.4": "avendo intelligenza e sapere, non farebbe un’offerta al momento debito? ",
   "iti98:6.1": "Per quelli che parlano o ascoltano ",
   "iti98:6.2": "con un cuore pieno di devozione, ",
