Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga10/iti99_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga10/iti99_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti99_translation-it-soma.json
@@ -14,5 +14,5 @@
   "iti99:7.1": "x ",
   "iti99:7.2": "x ",
   "iti99:7.3": "Io vi dico che quello è un maestro/esperto delle tre conoscenze, ",
-  "iti99:7.4": "e non in base alla tradizione orale** "
+  "iti99:7.4": "non in base alla tradizione orale.** "
 }
