--- a/translation/it/soma/sutta/kn/iti/vagga10/iti99_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti99_translation-it-soma.json
@@ -10,7 +10,7 @@
   "iti99:6.1": "Chiunque veda così le vite passate, ",
   "iti99:6.2": "il paradiso e l’inferno, ",
   "iti99:6.3": "ha ottenuto la distruzione della nascita, ** ",
-  "iti99:6.4": "è un saggio compiuto. ** ",
+  "iti99:6.4": "è un sapiente compiuto. ** ",
   "iti99:7.1": "x ",
   "iti99:7.2": "x ",
   "iti99:7.3": "Io vi dico che quello è un maestro/esperto delle tre conoscenze, ",
