--- a/translation/it/soma/sutta/kn/iti/vagga10/iti91_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti91_translation-it-soma.json
@@ -7,7 +7,7 @@
   "iti91:2.6": "forse potrebbe essere possibile portare a termine questa intera massa di sofferenza.” ",
   "iti91:2.7": "In questo modo un giovane di buona famiglia rinuncia al mondo. ",
   "iti91:2.8": "Ma chi ha smania, passioni veementi, il cuore avverso*, intenzioni malevoli [odio/astio], sbadato (consapevole?), non presente (inconsapevole? / senza presenza mentale), con una mente non raccolta, distratto e dalle facoltà deboli, ",
-  "iti91:2.9": "è come della legna usata per accendere una pira funeraria: bruciata su ambo i lati, ricoperta in mezzo di escrementi, non è utile né per alimentare un fuoco nel villaggio né nella foresta. ",
+  "iti91:2.9": "è come della legna usata per accendere una pira funeraria: bruciata su ambo i lati, ricoperta in mezzo di escrementi, non è utile né nel villaggio né nella foresta. ",
   "iti91:2.10": "Io vi dico che, allo stesso modo, questa persona ha buttato via i conforti domestici (le gioie dei laici) senza adempiere l’obiettivo della vita ascetica (del monachesimo). ",
   "iti91:3.1": "Chi butta via i conforti domestici (le gioie dei laici), ",
   "iti91:3.2": "e fallisce nell’obiettivo della vita ascetica (del monachesimo), ",
