Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga10/iti92_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga10/iti92_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti92_translation-it-soma.json
@@ -9,7 +9,7 @@
   "iti92:3.2": "ma se non è smanioso... ",
   "iti92:3.3": "allora sarà vicino a me e io a lui. ",
   "iti92:3.4": "Perché questo? ",
-  "iti92:3.5": "Perchè quel cercatore vede il Dhamma. ",
+  "iti92:3.5": "Perché quel cercatore vede il Dhamma. ",
   "iti92:3.6": "E vedendo il Dhamma mi vede. ",
   "iti92:4.1": "Anche se mi segue, uno che rimane ",
   "iti92:4.2": "anelante e tormentato, è come ",
