Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga10/iti92_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga10/iti92_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti92_translation-it-soma.json
@@ -5,7 +5,7 @@
   "iti92:2.4": "Perché questo? ",
   "iti92:2.5": "Perché quel cercatore non vede il Dhamma. ",
   "iti92:2.6": "E non vedendo il Dhamma, non mi vede. ",
-  "iti92:3.1": "Un cercatore potrebbe essere a cento yojana di distanza, ",
+  "iti92:3.1": "Un cercatore potrebbe essere a cento leghe (yojana) di distanza, [ADD FOOTNOTE on yojana] ",
   "iti92:3.2": "ma se non è smanioso... ",
   "iti92:3.3": "allora sarà vicino a me e io a lui. ",
   "iti92:3.4": "Perché questo? ",
