--- a/translation/it/soma/sutta/kn/iti/vagga10/iti92_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti92_translation-it-soma.json
@@ -14,7 +14,7 @@
   "iti92:4.1": "Anche se mi segue, uno che rimane ",
   "iti92:4.2": "anelante e tormentato, è come ",
   "iti92:4.3": "il perturbato dall’imperturbabile, ",
-  "iti92:4.4": "l’inappagato dall’appagato, ",
+  "iti92:4.4": "il fresco dall’arso (lo spento dall’acceso), ",
   "iti92:4.5": "il desideroso dal senza desideri: ",
   "iti92:4.6": "è molto distante, non importa quanto sia vicino. ",
   "iti92:5.1": "Il saggio che conosce direttamente l’insegnamento ",
