--- a/translation/it/soma/sutta/kn/iti/vagga10/iti92_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti92_translation-it-soma.json
@@ -17,7 +17,7 @@
   "iti92:4.4": "il fresco dall’arso (la frescura dall’arsura// lo spento dall’acceso), ",
   "iti92:4.5": "il desideroso dal senza desideri: ",
   "iti92:4.6": "è molto distante, non importa quanto sia vicino. ",
-  "iti92:5.1": "Il saggio che conosce direttamente l’insegnamento ",
+  "iti92:5.1": "Il saggio che conosce direttamente il Dhamma ",
   "iti92:5.2": "e comprende il Dhamma, ",
   "iti92:5.3": "imperturbabile si placa ",
   "iti92:5.4": "come un lago profondo protetto dal vento. ",
