--- a/translation/it/soma/sutta/kn/iti/vagga10/iti92_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti92_translation-it-soma.json
@@ -24,5 +24,5 @@
   "iti92:6.1": "È come l’imperturbabile dall’imperturbabile, ",
   "iti92:6.2": "il fresco dal fresco (la frescura dalla frescura) ",
   "iti92:6.3": "il senza desideri dal senza desideri: ",
-  "iti92:6.4": "è molto vicino.” "
+  "iti92:6.4": "guarda quanto è vicino.” "
 }
