--- a/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
@@ -26,7 +26,7 @@
   "iti93:8.2": "giorno e notte assidui, ",
   "iti93:8.3": "raggiungono il refrigerio assoluto (parinibbāna) ",
   "iti93:8.4": "e trascendono la sofferenza senza residui. ",
-  "iti93:9.1": "Quei nobili veggenti, ",
+  "iti93:9.1": "Quei nobili conoscitori, ",
   "iti93:9.2": "quei saggi che comprendono correttamente (nel modo giusto), ",
   "iti93:9.3": "con l’eliminazione della nascita come superiore conoscenza, ",
   "iti93:9.4": "non tornano più a nuova esistenza.” "
