Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
@@ -16,7 +16,7 @@
   "iti95:5.2": "la corrente difficile da attraversare, ",
   "iti95:5.3": "raggiungono il refrigerio assoluto (parinibbāna) ",
   "iti95:5.4": "e trascendono la sofferenza senza residui. ",
-  "iti95:6.1": "Quei nobili veggenti, ",
+  "iti95:6.1": "Quei nobili luminari, ",
   "iti95:6.2": "comprendendo correttamente (nel modo giusto), ",
   "iti95:6.3": "con l’eliminazione della nascita come superiore conoscenza, ",
   "iti95:6.4": "non ritornano più a nuova esistenza.” "
