Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti93_translation-it-soma.json
@@ -28,6 +28,6 @@
   "iti93:8.4": "e trascendono la sofferenza senza residui. ",
   "iti93:9.1": "Quei nobili luminari, ",
   "iti93:9.2": "quei saggi che comprendono correttamente (nel modo giusto), ",
-  "iti93:9.3": "con l’eliminazione della nascita come superiore conoscenza, //con la superiore conoscenza della distruzione della nascita ",
+  "iti93:9.3": "comprendendo l’eliminazione della nascita con la superiore conoscenza, ",
   "iti93:9.4": "non tornano più a nuova esistenza.” "
 }
