--- a/translation/it/soma/sutta/kn/iti/vagga10/iti94_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti94_translation-it-soma.json
@@ -4,5 +4,5 @@
   "iti94:3.1": "Per il cercatore che ha abbandonato sette trappole,* ",
   "iti94:3.2": "ha reciso il tramite/conduttore, ",
   "iti94:3.3": "ha annientato la rinascita nel saṁsāra, ",
-  "iti94:3.4": "non c’è più ritorno ad alcuno stato di esistenza.” "
+  "iti94:3.4": "non ritorna più a nuova esistenza.” "
 }
