--- a/translation/it/soma/sutta/kn/iti/vagga10/iti99_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti99_translation-it-soma.json
@@ -12,7 +12,7 @@
   "iti99:6.3": "ha ottenuto la distruzione della nascita, ** ",
   "iti99:6.4": "è un sapiente padrone della conoscenza superiore. ** ",
   "iti99:7.1": "Maestro delle tre conoscenze, ",
-  "iti99:7.2": "x ",
+  "iti99:7.2": "è un brahmano che possiede le tre conoscenze superiori. ",
   "iti99:7.3": "Io vi dico che quello è un maestro/esperto delle tre conoscenze, ",
   "iti99:7.4": "non in base alla tradizione orale.** "
 }
