--- a/translation/it/soma/sutta/kn/iti/vagga10/iti99_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti99_translation-it-soma.json
@@ -8,7 +8,7 @@
   "iti99:5.1": "E poi, grazie all’eliminazione di ogni compulsione (āsava), arriva e rimane nella liberazione del cuore priva di compulsioni, nella liberazione attraverso la saggezza, acquisita direttamente in questa vita con la conoscenza superiore*** ",
   "iti99:5.2": "Questa è la terza conoscenza acquisita: l’ignoranza è annientata, la conoscenza sorta, l’oscurità annientata, la luce sorta, come accade a chi è/pratica solerte, zelante e risoluto. *** ",
   "iti99:6.1": "Chiunque veda così le vite passate, ",
-  "iti99:6.2": "il paradiso e l’inferno, ",
+  "iti99:6.2": "il paradiso e l’inferno ",
   "iti99:6.3": "ha ottenuto la distruzione della nascita, ** ",
   "iti99:6.4": "è un sapiente padrone della conoscenza superiore. ** ",
   "iti99:7.1": "Maestro delle tre conoscenze, ",
