Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti100_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti100_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti100_translation-it-soma.json
@@ -3,7 +3,7 @@
   "iti100:2.2": "Voi siete i miei figli legittimi, nati dalla mia bocca, nati dal Dhamma, creati dal Dhamma, eredi del Dhamma, non eredi di beni materiali. ",
   "iti100:3.1": "Ci sono due tipi di doni: ** ",
   "iti100:3.2": "un dono materiale e il dono del Dhamma. ",
-  "iti100:3.3": "Tra questi due doni il migliore è il dono di Dhamma. ** ",
+  "iti100:3.3": "Tra questi due doni il migliore è il dono del Dhamma. ** ",
   "iti100:4.1": "* ",
   "iti100:4.2": "* ",
   "iti100:4.3": "* ",
