Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti100_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti100_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti100_translation-it-soma.json
@@ -11,7 +11,7 @@
   "iti100:5.2": "* ",
   "iti100:5.3": "* ",
   "iti100:6.1": "Ci sono due tipi di offerte: ",
-  "iti100:6.2": "offerte materiali e offerte di Dhamma. ",
+  "iti100:6.2": "un’offerta materiale e un’offerta del Dhamma. ",
   "iti100:6.3": "Tra queste due offerte la migliore è l’offerta di Dhamma. ",
   "iti100:7.1": "Il Buddha, libero dall’avarizia, ",
   "iti100:7.2": "compassionevole verso tutti gli esseri senzienti, ha dato come offerta il Dhamma. ",
