--- a/translation/it/soma/sutta/kn/iti/vagga11/iti101_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti101_translation-it-soma.json
@@ -5,7 +5,7 @@
   "iti101:2.4": "Avanzi e rimasugli di cibo come pasto... ",
   "iti101:2.5": "I piedi/radici degli alberi come giaciglio e panca... ",
   "iti101:2.6": "Urina fermentata come medicina... ",
-  "iti101:2.8": "Quando un cercatore è contento con poco, con quel che è facilmente reperibile e irreprensibile, io vi dico che possiede uno dei fattori della vita contemplativa. ",
+  "iti101:2.8": "Quando un cercatore è contento con poco, con quel che è facilmente reperibile e irreprensibile, io vi dico che possiede uno dei fattori della vita ascetica (contemplativa). ",
   "iti101:3.1": "Quando uno è contento con quello che è irreprensibile, ",
   "iti101:3.2": "di poco conto, e facilmente reperibile, ",
   "iti101:3.3": "e sia per quanto riguarda l’alloggio ",
