--- a/translation/it/soma/sutta/kn/iti/vagga11/iti101_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti101_translation-it-soma.json
@@ -9,7 +9,7 @@
   "iti101:3.1": "Quando uno è contento con quello che è irreprensibile, ",
   "iti101:3.2": "di poco conto e facilmente reperibile, ",
   "iti101:3.3": "sia per quanto riguarda l’alloggio ",
-  "iti101:3.4": "il saio, il mangiare e il bere, ",
+  "iti101:3.4": "il saio, il mangiare e il bere e ",
   "iti101:3.5": "non ha avversione mentale, ",
   "iti101:3.6": "non trova impacci da nessuna parte. ",
   "iti101:4.1": "Queste qualità si ",
