Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti101_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti101_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti101_translation-it-soma.json
@@ -11,7 +11,7 @@
   "iti101:3.3": "sia per quanto riguarda l’alloggio ",
   "iti101:3.4": "il saio, il mangiare e il bere e ",
   "iti101:3.5": "non ha avversione mentale, ",
-  "iti101:3.6": "non trova impacci da nessuna parte. ",
+  "iti101:3.6": "non si trova impacci da nessuna parte. ",
   "iti101:4.1": "Queste qualità si ",
   "iti101:4.2": "addicono alla vita contemplativa, ",
   "iti101:4.3": "e sono perfezionate da un contento, ",
