Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti101_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti101_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti101_translation-it-soma.json
@@ -15,5 +15,5 @@
   "iti101:4.1": "Queste qualità, che si ",
   "iti101:4.2": "addicono alla vita contemplativa, ",
   "iti101:4.3": "sono perfezionate da un cercatore ",
-  "iti101:4.4": "solerte cercatore.” "
+  "iti101:4.4": "contento e solerte.” "
 }
