--- a/translation/it/giovannizappa/sutta/mn/mn106_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn106_translation-it-giovannizappa.json
@@ -22,7 +22,7 @@
   "mn106:3.6": "E pongono un ostacolo al discepolo nobile che si addestra qui. ",
   "mn106:3.7": "Perché non medito con una mente abbondante ed espansiva, avendo raggiunto maestria del mondo e stabilizzato la mente? ",
   "mn106:3.8": "Così non avrò più qualità cattive e malsane come desiderio, cattiveria, e aggressività. ",
-  "mn106:3.9": "E abbandonandole la mia mente, senza più limiti, diverrà illimitata e ben sviluppata’. ",
+  "mn106:3.9": "E abbandonandole, la mia mente, senza più limiti, diverrà illimitata e ben sviluppata’. ",
   "mn106:3.10": "Praticando in questo modo e meditando così frequentemente, la sua mente diventa fiduciosa in quella dimensione. ",
   "mn106:3.11": "Essendo fiduciosa, ottiene l’imperturbabile ora, o viene liberato attraverso saggezza. ",
   "mn106:3.12": "Alla dissoluzione del corpo, dopo la morte, è possibile che la sua coscienza lo conduca a rinascere nell’imperturbabile. ",
