--- a/translation/it/giovannizappa/sutta/mn/mn106_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn106_translation-it-giovannizappa.json
@@ -94,7 +94,7 @@
   "mn106:10.8": "“Ānanda, prendi un monaco che pratica così: ",
   "mn106:10.9": "‘Potrebbe non essere, e potrebbe non essere mio. Non sarà, e non sarà mio. Abbandono ciò che esiste, ciò che è venuto in essere’. ",
   "mn106:10.10": "In questo modo sviluppa equanimità. ",
-  "mn106:10.11": "Ne trarre piacere, la accoglie, e continua ad afferrare quell’equanimità. ",
+  "mn106:10.11": "Ne trarre piacere, lo accoglie, e continua ad afferrare quell’equanimità. ",
   "mn106:10.12": "La sua coscienza la prende come supporto e ci si attacca. ",
   "mn106:10.13": "Un monaco con attaccamento non si estingue” ",
   "mn106:11.1": "“Ma, Signore, a cosa si sta attaccando quel monaco?” ",
