--- a/translation/it/giovannizappa/sutta/mn/mn106_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn106_translation-it-giovannizappa.json
@@ -104,7 +104,7 @@
   "mn106:11.5": "Poiché la cosa migliore a cui attaccarsi è ",
   "mn106:11.6": "la dimensione della né percezione né non-percezione. ",
   "mn106:12.1": "Prendi un monaco che pratica così: ",
-  "mn106:12.2": "‘Non sarebbe, e non sarebbe mio. Non sarà, e non sarà mio. Abbandono ciò che esiste, ciò che è venuto in essere’. ",
+  "mn106:12.2": "‘Potrebbe non essere, e potrebbe non essere mio. Non sarà, e non sarà mio. Abbandono ciò che esiste, ciò che è venuto in essere’. ",
   "mn106:12.3": "In questo modo sviluppa equanimità. ",
   "mn106:12.4": "Non ne trarre piacere, non la accoglie, e non continua ad afferrare quell’equanimità. ",
   "mn106:12.5": "Così la sua coscienza non la prende come supporto e non ci si attacca. ",
