--- a/translation/it/giovannizappa/sutta/mn/mn106_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn106_translation-it-giovannizappa.json
@@ -110,7 +110,7 @@
   "mn106:12.5": "Così la sua coscienza non la prende come supporto e non ci si attacca. ",
   "mn106:12.6": "Un monaco senza attaccamento si estingue” ",
   "mn106:13.1": "“È incredibile, Signore, è strabiliante! ",
-  "mn106:13.2": "Sembra che il Buddha ci abbia spiegato come attraversare il diluvio facendo affidamento su un o un altro supporto. ",
+  "mn106:13.2": "Sembra che il Buddha ci abbia spiegato come attraversare il diluvio facendo affidamento su un supporto o l’altro. ",
   "mn106:13.3": "Ma, Signore, cos’è la liberazione nobile?” ",
   "mn106:13.4": "“Ānanda, è quando un discepolo nobile riflette così: ",
   "mn106:13.5": "‘I piaceri dei sensi in questa vita e nelle prossime, ",
