--- a/translation/it/giovannizappa/sutta/mn/mn107_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn107_translation-it-giovannizappa.json
@@ -70,7 +70,7 @@
   "mn107:14.9": "Per favore, mi indichi la strada per Rājagaha’ ",
   "mn107:14.10": "Allora gli dici: ",
   "mn107:14.11": "“Ecco, Signore, questa strada va a Rājagaha. ",
-  "mn107:14.12": "La segua per un po’, e vedrà un certo villaggio. La segua ancora un po’, e vedrà una certa cittadina. ",
+  "mn107:14.12": "Seguila per un po’, e vedrai un certo villaggio. Seguila ancora un po’, e vedrai una certa cittadina. ",
   "mn107:14.13": "La segua ancora un po’ e vedrà Rājagaha con i suoi piacevoli parchi, boschi, prati, e stagni con fiori di loto’. ",
   "mn107:14.14": "Istruito da te in questo modo, potrebbe comunque prendere la strada sbagliata, dirigendosi verso ovest. ",
   "mn107:14.15": "Ma una seconda persona potrebbe arrivare con la stessa richiesta e riceverebbe le stesse istruzioni. ",
