--- a/translation/it/soma/sutta/kn/iti/vagga11/iti102_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti102_translation-it-soma.json
@@ -1,6 +1,6 @@
 {
   "iti102:2.1": "Io dico che la distruzione delle compulsioni è per uno che conosce e vede, non per uno che non conosce e non vede. ",
-  "iti102:2.2": "E come la distruzione...? ",
+  "iti102:2.2": "Per uno che conosce e vede cosa? ",
   "iti102:2.3": "Qui c’è la distruzione delle compulsioni per uno che conosce e vede la sofferenza, la causa della sofferenza, la fine della sofferenza e il sentiero che conduce alla fine della sofferenza. ",
   "iti102:3.1": "Al praticante che si allena * ",
   "iti102:3.2": "* ",
