--- a/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
@@ -1,5 +1,5 @@
 {
-  "iti103:2.1": "Qualsiasi contemplativo o brahmano che non conosca così com’è (yathābhūtaṁ) ‘questa è la sofferenza,’ ‘questa è la causa della sofferenza ,’ ‘questa è la fine della sofferenza,’ ‘questo è il percorso che conduce alla fine della sofferenza,’ ** ",
+  "iti103:2.1": "Qualsiasi asceta o brahmano che non conosca così com’è (yathābhūtaṁ) ‘questa è la sofferenza,’ ‘questa è la causa della sofferenza ,’ ‘questa è la fine della sofferenza,’ ‘questo è il percorso che conduce alla fine della sofferenza,’ ** ",
   "iti103:2.2": "nessuno di loro, asceti o brahmani, considerati asceti tra gli asceti o considerati brahmani tra i brahmani, tra questi venerabili ha raggiunto il fine ultimo della vita ascetica o dell’essere un brahmano, ovvero la liberazione attraverso la saggezza acquisita direttamente in questa vita con la conoscenza superiore** ",
   "iti103:3.1": "Ma invece chiunque conosca.... ",
   "iti103:3.2": ".. ",
