--- a/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
@@ -4,7 +4,7 @@
   "iti103:3.1": "Ma invece qualsiasi asceta o brahmano che conosca.... ",
   "iti103:3.2": ".. ",
   "iti103:4.1": "Chiunque non conosca la sofferenza, ",
-  "iti103:4.2": "l’origine della sofferenza, ",
+  "iti103:4.2": "l’origine della sofferenza ",
   "iti103:4.3": "e dove tutta la sofferenza ",
   "iti103:4.4": "si conclude senza residuo, ",
   "iti103:4.5": "e non conoscono quel percorso ",
