--- a/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
@@ -6,7 +6,7 @@
   "iti103:4.1": "Chiunque non conosca la sofferenza, ",
   "iti103:4.2": "l’origine della sofferenza ",
   "iti103:4.3": "e dove tutta la sofferenza ",
-  "iti103:4.4": "si conclude senza residuo, ",
+  "iti103:4.4": "finisce senza residuo, ",
   "iti103:4.5": "e non conoscono quel percorso ",
   "iti103:4.6": "che conduce alla pacificazione della sofferenza,** ",
   "iti103:5.1": "privi della liberazione del cuore ",
