Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
@@ -9,7 +9,7 @@
   "iti103:4.4": "s’interrompe senza residuo. ",
   "iti103:4.5": "Chiunque non conosca quel percorso ",
   "iti103:4.6": "che conduce alla pacificazione della sofferenza,** ",
-  "iti103:5.1": "privo della liberazione del cuore ",
+  "iti103:5.1": "senza la liberazione del cuore ",
   "iti103:5.2": "e della liberazione attraverso la sapienza, ",
   "iti103:5.3": "sono incapaci di giungere alla fine, ",
   "iti103:5.4": "e sono destinati verso la nascita e vecchiaia. ",
