--- a/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
@@ -11,7 +11,7 @@
   "iti103:4.6": "che conduce alla pacificazione della sofferenza,** ",
   "iti103:5.1": "senza la liberazione del cuore ",
   "iti103:5.2": "e della liberazione attraverso la sapienza, ",
-  "iti103:5.3": "sono incapaci di giungere alla fine, ",
+  "iti103:5.3": "è incapace di giungere alla fine, ",
   "iti103:5.4": "e sono destinati verso la nascita e vecchiaia. ",
   "iti103:6.1": "Quelli che conoscono la sofferenza ",
   "iti103:6.2": "l’origine della sofferenza, ",
