Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
@@ -16,7 +16,7 @@
   "iti103:6.1": "Quelli che conoscono la sofferenza ",
   "iti103:6.2": "l’origine della sofferenza, ",
   "iti103:6.3": "e dove tutta la sofferenza ",
-  "iti103:6.4": "è completamente terminato, ",
+  "iti103:6.4": "s’interrompe senza residuo, ",
   "iti103:6.5": "e conoscono quel percorso * ",
   "iti103:6.6": "che conduce alla pacificazione della sofferenza. * ",
   "iti103:7.1": "con la perfetta liberazione del cuore * ",
