Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti103_translation-it-soma.json
@@ -22,5 +22,5 @@
   "iti103:7.1": "con la perfetta liberazione del cuore * ",
   "iti103:7.2": "e la liberazione attraverso la saggezza,* ",
   "iti103:7.3": "sono capaci (in grado) di giungere alla fine, ",
-  "iti103:7.4": "e non sono destinati verso la nascita e vecchiaia. * "
+  "iti103:7.4": "e non sono destinati alla nascita e vecchiaia. * "
 }
