--- a/translation/it/soma/sutta/kn/iti/vagga11/iti105_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti105_translation-it-soma.json
@@ -1,5 +1,5 @@
 {
-  "iti105:2.1": "Queste quattro cose fanno sorgere la sete, ovunque la sete di un cercatore prende forma e viene a galla. ",
+  "iti105:2.1": "Cercatori, queste quattro cose fanno sorgere la sete, ovunque la sete di un cercatore prende forma e viene a galla. ",
   "iti105:2.2": "Quali quattro? ",
   "iti105:2.3": "A causa del saio, ",
   "iti105:2.4": "a causa della questua, ",
