Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
@@ -1,7 +1,7 @@
 {
   "iti95:2.1": "Cercatori, ci sono queste tre rinascite nella sfera dei sensi. (nei reami sensuali) ",
   "iti95:2.2": "Quali tre? ",
-  "iti95:2.3": "Quella in cui i piaceri dei sensi sono presenti, quella in cui ci si delizia nella creazione, quella in cui si ha potere sulle creazioni degli altri. ",
+  "iti95:2.3": "Quelli che desiderano ciò che è già esistente, quelli che si deliziano nella creazione, quelli che hanno potere sulle creazioni degli altri. ",
   "iti95:3.1": "Quelli per cui i piaceri dei sensi sono presenti, ",
   "iti95:3.2": "quei deva che li controllano ",
   "iti95:3.3": "e quei deva che si deliziano nel crearli: ",
