--- a/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
@@ -3,7 +3,7 @@
   "iti95:2.2": "Quali tre? ",
   "iti95:2.3": "Quelli che desiderano ciò che è già esistente, quelli che si deliziano nel creare, quelli che hanno potere sulle creazioni degli altri. ",
   "iti95:3.1": "Quelli per cui i piaceri dei sensi sono presenti, // Quelli che desiderano ciò che è già esistente, ",
-  "iti95:3.2": "quei deva che li controllano ",
+  "iti95:3.2": "quei deva che li controllano // quei Deva che si deliziano nel creare, ",
   "iti95:3.3": "e quei deva che si deliziano nel crearli: ",
   "iti95:3.4": "tutti coloro che indugiano nei piaceri dei sensi, ",
   "iti95:3.5": "non trascendono il Saṁsāra, ",
