--- a/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti95_translation-it-soma.json
@@ -4,7 +4,7 @@
   "iti95:2.3": "Quelli che desiderano ciò che è già esistente, quelli che si deliziano nel creare, quelli che hanno potere sulle creazioni degli altri. ",
   "iti95:3.1": "Quelli che desiderano ciò che è già esistente, ",
   "iti95:3.2": "quei Deva che hanno potere sulle creazioni degli altri, ",
-  "iti95:3.3": "e quei Deva che si deliziano nel creare, ",
+  "iti95:3.3": "quei Deva che si deliziano nel creare, ",
   "iti95:3.4": "tutti coloro che indugiano nei piaceri dei sensi, ",
   "iti95:3.5": "non trascendono il Saṁsāra, ",
   "iti95:3.6": "passando da un’esistenza all’altra. ",
