--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig8.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig8.1_translation-ru-narinyanievmenenko.json
@@ -6,7 +6,7 @@
   "thig8.1:1.2": "Со способностями хорошо взращёнными, ",
   "thig8.1:1.3": "Достигнет состояния покоя, ",
   "thig8.1:1.4": "Неотразимого, сладостного». ",
-  "thig8.1:2.1": "Дэвы Таватимсы и Ямы, Туситы, ",
+  "thig8.1:2.1": "«Дэвы Таватимсы и Ямы, Туситы, ",
   "thig8.1:2.3": "Дэвы, Радующиеся творению, ",
   "thig8.1:2.4": "И дэвы, Владеющие творениями других, —",
   "thig8.1:2.5": "Направь ты разум свой туда, ",
