Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig8.1_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig8.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig8.1_translation-ru-narinyanievmenenko.json
@@ -12,5 +12,6 @@
   "thig8.1:2.5": "Направь ты разум свой туда, ",
   "thig8.1:2.6": "Где раньше обитала!» ",
   "thig8.1:3.1": "«Дэвы Таватимсы и Ямы, Туситы, ",
-  "thig8.1:3.3": "Дэвы, Радующиеся творению, "
+  "thig8.1:3.3": "Дэвы, Радующиеся творению, ",
+  "thig8.1:3.4": "И дэвы, Владеющие творениями других, —"
 }
