Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig8.1_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig8.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig8.1_translation-ru-narinyanievmenenko.json
@@ -15,5 +15,6 @@
   "thig8.1:3.3": "Дэвы, Радующиеся творению, ",
   "thig8.1:3.4": "И дэвы, Владеющие творениями других, —",
   "thig8.1:4.1": "Все они под гнётом воззрений о самости, ",
-  "thig8.1:4.2": "Самости не превзойдя; "
+  "thig8.1:4.2": "Самости не превзойдя; ",
+  "thig8.1:4.3": "Бродят из существования в существование, "
 }
