Translations by neptunao to translation/ru/narinyanievmenenko/sutta/kn/thig/thig8.1_translation-ru-narinyanievmenenko.json

--- a/translation/ru/narinyanievmenenko/sutta/kn/thig/thig8.1_translation-ru-narinyanievmenenko.json
+++ b/translation/ru/narinyanievmenenko/sutta/kn/thig/thig8.1_translation-ru-narinyanievmenenko.json
@@ -27,5 +27,6 @@
   "thig8.1:6.3": "Будда наставлял меня, ",
   "thig8.1:6.4": "Мой ум возрадовался ей. ",
   "thig8.1:7.1": "Слова его услышав, ",
-  "thig8.1:7.2": "Учению обрадовалась я. "
+  "thig8.1:7.2": "Учению обрадовалась я. ",
+  "thig8.1:7.3": "Три знания открылись для меня, "
 }
