Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
@@ -1,5 +1,5 @@
 {
-  "iti104:2.1": "Cercatori, prendiamo il caso in cui ci sia un cercatore dalla perfetta virtù, samādhi, saggezza, liberazione, conoscenza e visione della liberazione. È un oratore, un istruttore, un maestro che esorta/incoraggia, ispira e delizia, un insegnante competente del buon Dhamma. Io vi dico che vedere, ",
+  "iti104:2.1": "Cercatori, prendiamo il caso in cui ci sia un cercatore dalla perfetta virtù, samādhi, saggezza, liberazione, conoscenza e visione della liberazione. È un oratore, un istruttore, un maestro che esorta, ispira e delizia, un insegnante competente del buon Dhamma. Io vi dico che vedere, ",
   "iti104:2.2": "ascoltare, ",
   "iti104:2.3": "visitare, ",
   "iti104:2.4": "stare vicino, ",
