Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
@@ -11,7 +11,7 @@
   "iti104:3.1": "Questo è uno stato che crea gioia ",
   "iti104:3.2": "per quelli che conoscono, ",
   "iti104:3.3": "ovvero quelli che hanno coltivato se stessi, ",
-  "iti104:3.4": "dei Nobili che vivono secondo il Dhamma, * ",
+  "iti104:3.4": "quei Nobili che vivono secondo il Dhamma, * ",
   "iti104:4.1": "e rendono chiaro il buon Dhamma ",
   "iti104:4.2": "luminari che illuminano ",
   "iti104:4.3": "sorgenti di luce, avveduti (oculati) ",
