Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti104_translation-it-soma.json
@@ -12,7 +12,7 @@
   "iti104:3.2": "ovvero il vivere secondo il Dhamma dei Nobili, ",
   "iti104:3.3": "che conoscono ",
   "iti104:3.4": "e hanno coltivato se stessi.* ",
-  "iti104:4.1": "e rendono chiaro il buon Dhamma ",
+  "iti104:4.1": "Luminari che illuminano ",
   "iti104:4.2": "luminari che illuminano ",
   "iti104:4.3": "sorgenti di luce, avveduti (oculati) ",
   "iti104:4.4": "dotati di visione, stroncatori di conflitti. ",
