Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti107_translation-it-soma.json
@@ -9,7 +9,7 @@
   "iti107:4.1": "Da quelli che hanno una dimora, ",
   "iti107:4.2": "i senza dimora accettano il saio, ",
   "iti107:4.3": "i requisiti e un alloggio, ",
-  "iti107:4.4": "per proteggere dal pericolo. ",
+  "iti107:4.4": "come protezione dalle intemperie. ",
   "iti107:5.1": "Per via del Fortunato, ",
   "iti107:5.2": "i laici dediti alla vita domestica, ",
   "iti107:5.3": "hanno fede negli arahant, ",
