Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti108_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti108_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti108_translation-it-soma.json
@@ -1,5 +1,5 @@
 {
-  "iti108:2.1": "Cercatori, se un cercatore è subdolo, ostinato, ciarlone, impostore, arrogante e distratto, quel cercatore non è uno mio discepolo. ",
+  "iti108:2.1": "Cercatori, se un cercatore è subdolo, ostinato, ciarlone, impostore, arrogante e non raccolto, quel cercatore non è uno mio discepolo. ",
   "iti108:2.2": "Si è allontanato da questo Dhamma e Vinaya, non si appresta più a crescere, progredire e maturare in questo Dhamma e Vinaya. ",
   "iti108:2.3": "Se un cercatore non è subdolo, ciarlone o ostinato, ma invece avveduto (oculato) e ben raccolto, quel cercatore è un mio discepolo. ",
   "iti108:2.4": "Non si è allontanato da questo Dhamma Vinaya, e si appresta a più crescita, progresso e maturità in questo Dhamma Vinaya. ",
