Translations by sabbamitta to translation/de/site/names_translation-de-site.json

--- a/translation/de/site/names_translation-de-site.json
+++ b/translation/de/site/names_translation-de-site.json
@@ -1572,7 +1572,7 @@
   "names:1571": "Rohitassa ",
   "names:1572": "Gott, früher Seher aus dem Bhoja-Volk, Himmelswanderer ",
   "names:1573": "<a class='ref' href='/an4.45'>AN 4.45</a> ",
-  "names:1574": "Rojā ",
+  "names:1574": "Rojas ",
   "names:1575": "Gottheiten (Devas) ",
   "names:1576": "<a class='ref' href='/dn20'>DN 20</a> ",
   "names:1577": "Roruva ",
