Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -126,5 +126,6 @@
   "mn79:22.4": "„Was denkst du, Udāyī? ",
   "mn79:22.5": "Zu einer Zeit, zu der jemand das Stehlen aufgibt und nicht mehr stiehlt … ",
   "mn79:22.7": "Zu einer Zeit, zu der jemand sexuelle Verfehlungen aufgibt und keine sexuellen Verfehlungen mehr begeht … ",
-  "mn79:22.9": "Zu einer Zeit, zu der jemand das Lügen aufgibt und nicht mehr lügt, ist zu dieser Zeit sein Selbst ausschließlich glücklich, oder erlebt es sowohl Glück als auch Schmerz?“ "
+  "mn79:22.9": "Zu einer Zeit, zu der jemand das Lügen aufgibt und nicht mehr lügt, ist zu dieser Zeit sein Selbst ausschließlich glücklich, oder erlebt es sowohl Glück als auch Schmerz?“ ",
+  "mn79:22.10": "„Es erlebt sowohl glück als auch Schmerz, Herr.“ "
 }
