Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -134,5 +134,6 @@
   "mn79:22.14": "„Was denkst du, Udāyī? ",
   "mn79:22.15": "Wird eine ausschließlich glückliche Welt verwirklicht, indem man sich auf eine Übung mit einer Mischung ans Glück und Schmerz stützt?“ ",
   "mn79:23.1": "„Der Gesegnete hat das Gespräch abgeschnitten! Der Heilige hat das Gespräch abgeschnitten!“ ",
-  "mn79:23.2": "„Aber Udāyī, warum sagst du: "
+  "mn79:23.2": "„Aber Udāyī, warum sagst du: ",
+  "mn79:23.3": "‚Der Gesegnete hat das Gespräch abgeschnitten! Der Heilige hat das Gespräch abgeschnitten!‘?“ "
 }
