Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -138,5 +138,6 @@
   "mn79:23.3": "‚Der Gesegnete hat das Gespräch abgeschnitten! Der Heilige hat das Gespräch abgeschnitten!‘?“ ",
   "mn79:23.4": "„Herr, in unserer eigenen Tradition heißt es: ",
   "mn79:23.5": "‚Es gibt eine ausschließlich glückliche Welt, und es gibt eine begründete Übung, um eine ausschließlich glückliche Welt zu verwirklichen.‘ ",
-  "mn79:23.6": "Aber wenn der Buddha uns über unsere eigene Tradition nachgeht, auf uns eindringt und uns ins Kreuzverhör nimmt, erweist sie sich als gehaltlos, hohl und fehlgeleitet. "
+  "mn79:23.6": "Aber wenn der Buddha uns über unsere eigene Tradition nachgeht, auf uns eindringt und uns ins Kreuzverhör nimmt, erweist sie sich als gehaltlos, hohl und fehlgeleitet. ",
+  "mn79:23.7": "Aber Herr, gibt es eine ausschließlich glückliche Welt? Und gibt es eine begründete Übung, um eine ausschließlich glückliche Welt zu verwirklichen?“ "
 }
