Translations by sabbamitta to translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn79_translation-de-sabbamitta.json
@@ -141,5 +141,6 @@
   "mn79:23.6": "Aber wenn der Buddha uns über unsere eigene Tradition nachgeht, auf uns eindringt und uns ins Kreuzverhör nimmt, erweist sie sich als gehaltlos, hohl und fehlgeleitet. ",
   "mn79:23.7": "Aber Herr, gibt es eine ausschließlich glückliche Welt? Und gibt es eine begründete Übung, um eine ausschließlich glückliche Welt zu verwirklichen?“ ",
   "mn79:24.1": "„Es gibt eine ausschließlich glückliche Welt, und es gibt eine begründete Übung, um eine ausschließlich glückliche Welt zu verwirklichen.“ ",
-  "mn79:24.2": "„Nun, Herr, was ist diese begründete Übung, um eine ausschließlich glückliche Welt zu verwirklichen?“ "
+  "mn79:24.2": "„Nun, Herr, was ist diese begründete Übung, um eine ausschließlich glückliche Welt zu verwirklichen?“ ",
+  "mn79:25.1": "„Da tritt ein Mönch, ganz abgeschieden von den Sinnenfreuden, abgeschieden von untauglichen Eigenschaften, in die erste Vertiefung ein und verweilt darin; … "
 }
