Translations by sabbamitta to translation/de/sabbamitta/sutta/dn/dn25_translation-de-sabbamitta.json

--- a/translation/de/sabbamitta/sutta/dn/dn25_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/dn/dn25_translation-de-sabbamitta.json
@@ -262,7 +262,7 @@
   "dn25:19.18": "‚Herr, mit welcher Lehre schulst du deine Schüler, sodass sie behaupten, Trost im grundlegenden Zweck des geistlichen Lebens zu finden?‘ ",
   "dn25:19.19": "Es gibt da etwas, das besser und erlesener ist als das Genannte. Damit schule ich meine Schüler, sodass sie behaupten, Trost im grundlegenden Zweck des geistlichen Lebens zu finden.“ ",
   "dn25:19.20": "Daraufhin machten diese Wanderer einen Tumult: ",
-  "dn25:19.21": "„In diesem Fall sind wir verloren, und unsere Tradition ebenfalls! Wir kennen nichts, das besser oder erlesener wäre als das!“ ",
+  "dn25:19.21": "„In diesem Fall sind wir verloren, und unsere Tradition ebenfalls! Wir kennen nichts, das höher wäre als das!“ ",
   "dn25:20.0": "4. Nigrodha fühlt sich niedergeschlagen ",
   "dn25:20.1": "Da wurde dem Hausbesitzer Sandhāna klar: ",
   "dn25:20.2": "„Offenbar wollen diese Wanderer jetzt zuhören, was der Buddha sagt. Sie spitzen die Ohren und versuchen, zu verstehen!“ ",
