Translations by ayyasoma to translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json

--- a/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
@@ -1,5 +1,5 @@
 {
-  "iti109:2.1": "Cercatori, immaginate se un uomo fosse trasportato dalla corrente di un fiume ameno e splendente, ",
+  "iti109:2.1": "Cercatori, immaginate se un uomo fosse trasportato giù dalla corrente di un fiume ameno e splendente, ",
   "iti109:2.2": "e un altro uomo di buona vista, stando in piedi sulla riva, lo vedesse e gli dicesse: ",
   "iti109:2.3": "‘Attento amico, nonostante la corrente di quel fiume ameno e splendente ti sta trasportando, ma sotto c’è un lago con onde e mulinelli, pieno di animali feroci e mostri. Attento amico, perché se raggiungi il lago andrai incontro alla morte o vicino alla morte o a della sofferenza.’ ",
   "iti109:2.4": "E allora quella persona, dopo aver sentito quelle parole da quella persona, con mani e piedi farebbe uno sforzo controcorrente. ",
